--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,5 +1,10 @@
 .header-block {
+}   
+
+.header-title-block {
     padding: 26px 0;
+    display: flex;
+    justify-content: space-around;
 }
 
 .logo-img {
@@ -7,11 +12,6 @@
     background: url(../../shared/icons/Logo.svg) center center/cover no-repeat;
     width: 53px;
     height: 47px;    
-}
-
-.header-block {
-    display: flex;
-    justify-content: space-around;
 }
 
 .nav-block {
@@ -27,6 +27,17 @@
     line-height: 24px;
     text-transform: capitalize;
     color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.down-icon {
+    margin-left: 16px;
+    background: url(../../shared/icons/down.svg) center center/cover no-repeat;
+    width: 12px;
+    height: 6px;
 }
 
 .login-button {
@@ -47,4 +58,20 @@
     background: url(../../shared/icons/user-icon.svg) center center/cover no-repeat;
     width: 20px;
     height: 20px;
+}
+
+.shop-icon {
+    background: url(../../shared/icons/Shop.svg) center center/cover no-repeat;
+    width: 22px;
+    height: 26px;
+    margin-right: 24px;
+}
+
+.content-item {
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 49px;
+    text-transform: uppercase;
+    color: #000000;
+
 }
