--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,11 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Montserrat Alternates', sans-serif;
-    font-family: 'Oswald', sans-serif;
+}
+body {
+    background-color: #3A3A3A;
+}
+.container {
+    width: 1240px;
+    margin: 0 auto;
 }
