--- a/src/components/swiper/style.css
+++ b/src/components/swiper/style.css
@@ -1,6 +1,7 @@
 .partners-block-wrap {
     background: #3A3A3A;
     padding-bottom: 100px;
+    margin-top: 100px;
 }
 
 .partners-block {
@@ -24,7 +25,7 @@
 
 .swiper-block {
     width: 295px;
-    height: 330px;
+    height: 340px;
     background: #FFFFFF;
     box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
