Add about us page

--- a/src/components/MainContent/styles.module.css
+++ b/src/components/MainContent/styles.module.css
@@ -1,8 +1,8 @@
 .content_block {
-    margin-top: 137px;
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 400;
-    margin-bottom: 100px;
+    margin: 137px auto 100px;
+    width: 1240px;
 }
 .main_title {
     border-left: 3px solid #E39ACD;
