--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,7 +7,7 @@
 
 .logo-img {
     display: block;
-    background: url(../../shared/icons/Logo.svg) center center/cover no-repeat;
+    background: url(../../shared/icons/Logo_white.svg) center center/cover no-repeat;
     width: 53px;
     height: 47px;    
 }
