--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -85,6 +85,43 @@
     width: 27px;
     height: 26px;
     margin-right: 24px;
+    position: relative;
+}
+.lang-menu {
+    display: none;
+    margin-top: 25px;
+    width: 35px;
+    height: 90px;
+    background: #3A3A3A;
+    border-radius: 10px;
+    position: absolute;
+    z-index: 1;
+}
+.lang-menu:hover {
+    display: block;
+}
+
+.language-icon:hover .lang-menu {
+    display: block;
+    background: #2a2a2a;
+}
+
+.lang-menu-item:hover .lang-menu {
+    display: block;
+}
+
+
+.lang-menu-item {
+    cursor: pointer;
+    background: none;
+    border: none;
+    padding: 5px;
+    font-size: 25px;
+    line-height: 20px;
+}
+.lang-menu-item:hover {
+    background-color: grey;
+    border-radius: 10px;
 }
 
 .theme-icon {
