--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -25,7 +25,7 @@
     font-size: 20px;
     line-height: 24px;
     text-transform: capitalize;
-    color: #000000;
+    color: #FFFFFF;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,9 +40,10 @@
 
 .down-icon {
     margin-left: 16px;
-    background: url(../../shared/icons/down.svg) center center/cover no-repeat;
+    background: url(../../shared/icons/down_white.png) center center/cover no-repeat;
     width: 12px;
     height: 6px;
+    color: #FFFFFF;
 }
 
 .login-button {
@@ -74,14 +75,14 @@
 }
 
 .shop-icon {
-    background: url(../../shared/icons/Shop.svg) center center/cover no-repeat;
+    background: url(../../shared/icons/Shop_white.svg) center center/cover no-repeat;
     width: 22px;
     height: 26px;
     margin-right: 24px;
 }
 
 .language-icon {
-    background: url(../../shared/icons/language.svg) center center/cover no-repeat;
+    background: url(../../shared/icons/language_white.svg) center center/cover no-repeat;
     width: 27px;
     height: 26px;
     margin-right: 24px;
@@ -125,7 +126,7 @@
 }
 
 .theme-icon {
-    background: url(../../shared/icons/theme.svg) center center/cover no-repeat;
+    background: url(../../shared/icons/theme_white.svg) center center/cover no-repeat;
     width: 27px;
     height: 26px;
     margin-right: 24px;
