--- a/src/containers/sign-in/styles.module.css
+++ b/src/containers/sign-in/styles.module.css
@@ -3,9 +3,9 @@
     width: 814px;
     padding: 50px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-    margin: 100px auto;
     background: #B2B2B2;
     border-radius: 20px;
+    margin: 0 auto;
 }
 
 .inputForm,
@@ -16,6 +16,7 @@
     border-radius: 24px;
     font-size: 36px;
     text-align: left;
+    margin: 30px;
 }
 
 .containerLabel {
