--- a/src/pages/AboutPage/style.css
+++ b/src/pages/AboutPage/style.css
@@ -1,6 +1,8 @@
 .head-section {
     background: url("../../shared/img/Background-of-about-page.jpg") center center/cover no-repeat;
     height: 600px;
+    margin-top: -107px;
+
 }
 
 .about-us-text {
@@ -10,6 +12,7 @@
     line-height: 49px;
     color: #FFFFFF;
     width: 870px;
+    padding-top: 140px;
 }
 
 .about-us-description {
@@ -18,4 +21,117 @@
     font-size: 20px;
     line-height: 24px;
     color: #FFFFFF;
+    margin-top: 100px;
 }
+
+.main-section {
+    padding-top: 100px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.main-section-text {
+    font-family: 'Montserrat Alternates';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 35px;
+    color: white;
+    width: 525px;
+    margin-bottom: 166px;
+}
+
+.main-section-img {
+    position: relative;
+}
+
+.main-section-first-img {
+    background: url("../../shared/img/Main-section-img-1.png") center center/cover no-repeat;
+    width: 374px;
+    height: 374px;
+    position: absolute;
+    top: -21px;
+    right: -310px;
+}
+
+.main-section-second-img {
+    background: url("../../shared/img/Main-section-img-2.png") center center/cover no-repeat;
+    width: 374px;
+    height: 374px;
+    position: absolute;
+    top: 80px;
+    right: -553px;
+}
+
+.facts-section {
+    border: 10px solid #FFD100;
+    text-align: center;
+    padding: 27px 85px;
+}
+
+.facts-header {
+    font-family: 'Montserrat Alternates';
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    color: white;
+    margin-bottom: 38px;
+}
+
+.facts-text {
+    margin: 0 auto;
+    text-align: left;
+    max-width: 1070px;
+    font-family: 'Montserrat Alternates';
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 35px;
+    color: white;
+}
+
+.interesting-section {
+}
+
+.interesting-header {
+    font-family: 'Montserrat Alternates';
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 30px;
+    color: white;
+    margin-top: 112px;
+}
+
+.interesting-text {
+    font-family: 'Montserrat Alternates';
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 35px;
+    color: white;
+    max-width: 525px;
+    margin: 41px 0px 260px;
+}
+
+.interesting-info {
+    position: relative;
+}
+
+.interesting-first-img {
+    background: url(../../shared/img/interesting-first-img.png)center center/cover no-repeat;
+    width: 374px;
+    height: 374px;
+    position: absolute;
+    top: 75px;
+    right: -10px;
+    z-index: 1;
+}
+
+.interesting-second-img {
+    background: url(../../shared/img/interesting-second-img.png)center center/cover no-repeat;
+    width: 374px;
+    height: 374px;
+    position: absolute;
+    top: -50px;
+    right: 246px;
+    z-index: -1;
+}
+
