--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -17,7 +17,7 @@
     align-items: center;
 }
 
-.nav-item {
+.nav-item-asd {
     font-family: 'Montserrat Alternates';
     margin-right: 46px;
     font-weight: 600;
@@ -129,4 +129,8 @@
     width: 27px;
     height: 26px;
     margin-right: 24px;
+}
+
+button:focus {
+    outline: none;
 }
