--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -55,6 +55,13 @@
     font-size: 20px;
     line-height: 24px;
     color: #FFFFFF;
+    transition: all 200ms ease-in-out;
+    padding-bottom: 5px;
+}
+
+.page-links:hover {
+    color:#E85D04;
+    transition: all 200ms ease-in-out;
 }
 
 .head-icon-for-footer {
@@ -62,7 +69,7 @@
     width: 170px;
     height: 42px;
     background: url("../../shared/icons/ParkGo-for-footer.png") center center/cover no-repeat;
-    margin: 40px auto 0;
+    margin: 35px auto 0;
 }
 
 .footer-description {
