--- a/src/components/nav-menu-list/nav-menu-list.css
+++ b/src/components/nav-menu-list/nav-menu-list.css
@@ -14,6 +14,36 @@
     text-transform: uppercase;
     color: #fff;
     cursor: pointer;
+    transition: all 200ms ease-in-out;
+}
+
+.content-item:nth-child(1):hover {
+    color: #E85D04;
+    transition: all 200ms ease-in-out;
+}
+.content-item:nth-child(2):hover {
+    color: #E39ACD;
+    transition: all 200ms ease-in-out;
+}
+.content-item:nth-child(4):hover {
+    color: #70A4D7;
+    transition: all 200ms ease-in-out;
+}
+.content-item:nth-child(5):hover {
+    color: #E85D04;
+    transition: all 200ms ease-in-out;
+}
+.content-item:nth-child(6):hover {
+    color: #E39ACD;
+    transition: all 200ms ease-in-out;
+}
+.content-item:nth-child(8):hover {
+    color: #70A4D7;
+    transition: all 200ms ease-in-out;
+}
+.content-item:nth-child(9):hover {
+    color: #E85D04;
+    transition: all 200ms ease-in-out;
 }
 
 .width-word {
