--- a/src/pages/NewsPage/NewsPage.css
+++ b/src/pages/NewsPage/NewsPage.css
@@ -1,6 +1,6 @@
 .news-bg {
-    margin-top: -107px;
-    background: url(../../shared/img/News-bg.png)center center/cover no-repeat;
+    /*margin-top: -107px;*/
+    /*background: url(../../shared/img/News-bg.png)center center/cover no-repeat;*/
     width: 100%;
 }
 
