made some changes to theme provider

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -25,7 +25,7 @@
     font-size: 20px;
     line-height: 24px;
     text-transform: capitalize;
-    color: var(--default-color);
+    color: var(--default-color); 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -131,6 +131,7 @@
 
 .toggle-wrap{
     padding-right: 15px;
+}
 
 .theme-icon {
     background: url(../../shared/icons/theme_white.svg) center center/cover no-repeat;
