--- a/src/components/swiper/style.css
+++ b/src/components/swiper/style.css
@@ -26,7 +26,7 @@
 .swiper-block {
     width: 295px;
     height: 340px;
-    background: #FFFFFF;
+    background: #FCEEDE;
     border-radius: 20px;
     border: 1px solid gray;
     padding: 0px 10px;
