--- a/src/pages/AuthPage/styles.module.css
+++ b/src/pages/AuthPage/styles.module.css
@@ -29,12 +29,12 @@
     width: 900px;
     margin: 0 auto;
     justify-content: space-evenly;
-    color: #FFFFFF;
+    color: var(--default-color); 
     font-size: 30px;
     padding-left: 100px ;
 }
 .toggle_text a{
-    color: #FFFFFF;
+    color: var(--default-color); 
 }
 .checkbox:checked,
 label,
@@ -58,7 +58,7 @@ label:before {
     width: 36px;
     height: 36px;
     border-radius: 50%;
-    color: #fff;
+    color: var(--default-color); 
     background-color: #70A4D7;
     font-family: sans-serif;
     content: "<->" ;
