--- a/src/components/MainContent/styles.module.css
+++ b/src/components/MainContent/styles.module.css
@@ -15,6 +15,7 @@
     display: flex;
     margin-top: 53px;
     gap: 50px;
+    margin-bottom: 100px;
 }
 .content_title {
     padding-bottom: 17px;
@@ -25,7 +26,7 @@
     line-height: 36px;
 }
 .title_link{
-    color: white;
+    color: black var(--default-color);
 }
 .content_description {
     color: var(--default-color);
