--- a/src/pages/EventPage/style.module.css
+++ b/src/pages/EventPage/style.module.css
@@ -14,10 +14,10 @@
     border-bottom: 4px solid #EF9637;
     max-width: 510px;
     margin-bottom: 30px;
-    color: white;
+    color: black var(--default-color);
 }
 .content {
-    color: white;
+    color: black var(--default-color);
     font-weight: 400;
     font-size: 20px;
     line-height: 34px;
@@ -61,7 +61,7 @@
     font-size: 30px;
     line-height: 37px;
     border-left: 3px solid #E85D04;
-    color: white;
+    color: black var(--default-color);
     padding-left: 5px;
     margin-bottom: 54px;
 }
